# csf

./: .env.dev  .env.prod  .gitignore  README.md  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  vercel.json
client/: README.md  (+8 more)
server/: pyproject.toml
server/api/: actions.py  settings.py  urls.py
server/api/apps/users/: models.py
server/api/auth/: serializers.py  tests.py  urls.py  views.py
server/api/event/: admin.py  apps.py  models.py  serializers.py  test_authenticated.py  test_unauthenticated.py  tests.py  urls.py  views.py
server/api/event/migrations/: 0001_initial.py  0002_event_team_id.py  (+1 more)
server/api/mileage/: admin.py  apps.py  models.py  serializers.py  test_authenticated.py  test_unauthenticated.py  tests.py  urls.py  views.py
server/api/subteam/: admin.py  apps.py  models.py  serializers.py  test_authenticated.py  test_unauthenticated.py  tests.py  urls.py  views.py
server/api/team/: admin.py  apps.py  models.py  serializers.py  test_authenticated.py  test_unauthenticated.py  tests.py  urls.py  views.py
server/api/users/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
server/common/: utils.py
server/teams/: admin.py  forms.py  models.py  urls.py  views.py
server/teams/migrations/: 0001_initial.py  0002_alter_user_team_id.py  0003_alter_user_email.py  0004_alter_team_name.py
server/teams/templates/: create_team.html  join_team.html  layout.html  team.html
server/templates/: reset_password.html
server/users/: admin.py  models.py
server/users/migrations/: 0001_initial.py
(+133 files in other folders)
